--- a/content/styles.css
+++ b/content/styles.css
@@ -136,6 +136,7 @@ input[type=password] {
 }
 #formRegLog {
     background-color: #DDDDDD;
+    margin-top:50px;
     margin-left:35%;
     margin-right:35%;
     padding-bottom:25px;
@@ -237,4 +238,15 @@ input[type=password] {
     margin: 8px 0;
     margin-left:50px;
     padding: 12px 20px;
+}
+#authorSpace {
+    font-style: italic;
+    width: 10%;
+}
+#tableStyle {
+    font-size: 24px;
+ }
+#tableStyleRows
+{
+    font-size: 20px;
 }
