--- a/content/styles.css
+++ b/content/styles.css
@@ -63,18 +63,20 @@ table th, table td {
     background: #DDD;
     padding: 5px;
 }
-
+ul#messages {
+    font-size:30px;
+}
 ul#messages li {
     display: block;
     width: 80%;
     margin: 5px auto;
     text-align: center;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 25px;
 }
 
 ul#messages li.info {
-    background: #7f7;
+    background: white;
 }
 
 ul#messages li.error {
@@ -261,4 +263,30 @@ float:right;
 #postTitleLink {
     color: black;
     text-decoration: none;
+}
+#commentID {
+    background-color: white;
+    border: solid;
+    border-color:white;
+    padding:5px 0px;
+    margin-bottom:30px;
+    font-family:Tahoma;
+    font-size:20px;
+
+}
+#buttonComment {
+    background: #77ff77;
+    font-family:Tahoma;
+    font-size:20px;
+    border:solid;
+    border-color: #77ff77;
+    border-radius:40px;
+}
+#buttonComment:active {
+    background: #dd0000;
+    font-family:Tahoma;
+    font-size:20px;
+    border:solid;
+    border-color: #dd0000;
+    border-radius:40px;
 }
